# work-management

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  deploy.sh  dev.sh  tunnel.sh
.clinerules/: PROMPT_CODE_QUALITY_VALIDATION.md  PROMPT_COMMIT_MESSAGE_GENERATION.md  PROMPT_DOCUMENTATION.md  WORKFLOW_CODE_QUAILITY_AND_DOC.md  base-rule.md
backend/: auth_utils.py  create_admin.md  create_admin.py  create_staff_accounts.md  create_staff_accounts.py  create_user.py  data_store.py  dependencies.py  gunicorn.conf.py  main.py  migrate_members.py  migrate_to_sqlite.py  pyproject.toml  requirements.txt  reset_password.md  reset_password.py  staff_accounts.json
backend/routers/: admin.py  auth.py  confluence.py  deleted_issues.py  export.py  feedback.py  go.py  issue_comments.py  issues.py  notifications.py  okrs.py  progress.py  qna.py  settings.py  staff.py  task_comments.py  tasks.py  upload.py
backend/utils/: id_generator.py
data/: confluence_links.json  okrs.json  progress.json  qna.json  staff.json  tasks.json
design-system/: CLAUDE_CODE_GUIDE.md  README.md  SKILL.md  colors_and_type.css
design-system/preview/: _card.css  brand-icons.html  brand-logo.html  colors-brand.html  colors-chart.html  colors-foundation.html  colors-semantic.html  components-badges.html  components-buttons.html  components-cards.html  components-forms.html  components-nav.html  components-progress.html  components-tabs.html  spacing-elevation.html  spacing-radius.html  (+3 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js
nginx/: okr-app.conf
(+59 files in other folders)
