[project]
name = "okr-management"
version = "1.0.0"
description = "설비혁신파트 OKR 관리 시스템 백엔드"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "gunicorn==22.0.0",
    "python-multipart==0.0.9",
    "pandas==2.2.2",
    "pydantic==2.7.1",
    "python-dateutil==2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "black>=24.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"